objects/Claim__c.object
<CustomObject>
    <fields>
        <fullName>Refund__c</fullName>
        <formula>Opportunity__r.Refund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Erstattungsbetrag</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Response_Appeal__c</fullName>
        <label>Antwort Berufung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Claim_Letter__c</fullName>
        <label>Antwort Anspruchsschreiben</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Customer_Opposition__c</fullName>
        <label>Antwort Kundenwiderspruch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Insurance_Appeal__c</fullName>
        <label>Antwort Deckungsanfrage für Berufung</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Insurance_Claim_Letter__c</fullName>
        <label>Antwort Deckungsanfrage Anspruchsschr.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Insurance_Lawsuit__c</fullName>
        <label>Antwort Deckungsanfrage für Klage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Insurance_Legal_Opposition__c</fullName>
        <label>Antwort Deckungsanfrage Anwaltswiderspr.</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Lawsuit__c</fullName>
        <label>Antwort Klage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Response_Legal_Opposition__c</fullName>
        <label>Antwort Anwaltswiderspruch</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Ergebnis</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Results</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Einzelfallprüfung</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <formula>TEXT(Opportunity__r.Sales_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vertriebstyp</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sent_Mail_Flag_1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Mail Flag 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_Mail_Flag_2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent Mail Flag 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Stages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Helper__c</fullName>
        <label>Status Helper</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Entwurf</fullName>
                </value>
                <value>
                    <fullName>Kundenwiderspruch</fullName>
                </value>
                <value>
                    <fullName>Anwaltswiderspruch</fullName>
                </value>
                <value>
                    <fullName>Anspruchsschreiben</fullName>
                </value>
                <value>
                    <fullName>Klage</fullName>
                </value>
                <value>
                    <fullName>Sammelklage</fullName>
                </value>
                <value>
                    <fullName>Berufung</fullName>
                </value>
                <value>
                    <fullName>Abwicklung</fullName>
                </value>
                <value>
                    <fullName>Abgeschlossen</fullName>
                </value>
                <value>
                    <fullName>Warten auf Grundsatzurteil</fullName>
                </value>
                <value>
                    <fullName>Abbruch</fullName>
                </value>
                <value>
                    <fullName>Verteidigungsanzeige</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_Date_Before_Claim_Statement__c</fullName>
        <label>Übermittlung vor Klage</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submission_Date_Before_Lawsuit_Date__c</fullName>
        <label>Übermittlung vor Gerichtstermin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitter_Before_Claim_Statement__c</fullName>
        <label>Übermittler vor Klage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Transmitters</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitter_Before_Lawsuit_Date__c</fullName>
        <label>Übermittler vor Gerichtstermin</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Claim_Transmitters</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <formula>Opportunity__r.Test__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Time_Court_Date__c</fullName>
        <label>Uhrzeit Gerichtstermin</label>
        <summarizedField>Date__c.Start__c</summarizedField>
        <summaryForeignKey>Date__c.Claim__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Token__c</fullName>
        <label>Web Form Token</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_to_Ownership__c</fullName>
        <formula>$Label.SiteRoot + '/OwnershipConfirmation?token=' + Token__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>URL to Ownership</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand_Name__c</fullName>
        <formula>Opportunity__r.Vehicle_Brand_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fahrzeugmarke</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand_Reference__c</fullName>
        <label>Zeichen des Fahrzeugherstellers</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Brand__c</fullName>
        <formula>Opportunity__r.Vehicle_Brand__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fahrzeughersteller</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vergleich_geprueft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vergleich geprüft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>time_taken_claim_response__c</fullName>
        <formula>CEILING(Response_Insurance_Claim_Letter__c - Claim_Letter_Insurance_Date__c  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Zeit bis Antwort Deckungsanfrage Anspr.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <description>Object for managing legal claim process.</description>
    <label>Fall</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fälle</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Alle_F_lle_Krutisch</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Reference__c</columns>
        <columns>Stage__c</columns>
        <columns>Legal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Legal__c</field>
            <operation>contains</operation>
            <value>Krutisch</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Alle Fälle Krutisch</label>
    </listViews>
    <listViews>
        <fullName>Alle_Sachbearbeiter_Britta_falsch</fullName>
        <columns>NAME</columns>
        <columns>Opportunity__c</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Reference__c</columns>
        <columns>Stage__c</columns>
        <columns>Legal__c</columns>
        <columns>Customer_Opposition_Date__c</columns>
        <columns>Response_Customer_Opposition__c</columns>
        <columns>Legal_Opposition_Date__c</columns>
        <columns>Response_Legal_Opposition__c</columns>
        <columns>Result__c</columns>
        <columns>Legal_Opposition_Insurance_Date__c</columns>
        <columns>Lawsuit_Insurance_Date__c</columns>
        <columns>Cover_Note__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clerk__c</field>
            <operation>equals</operation>
            <value>N. Redlich</value>
        </filters>
        <label>Alle Sachbearbeiter Britta (falsch)</label>
        <sharedTo>
            <group>Jaeger</group>
            <group>Kainz</group>
            <group>VR24_Lebensversicherung</group>
            <group>Vortmann</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>K_Neue_ANWALT_DG_BRITTA</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Last_Stage_Change__c</columns>
        <columns>Stage__c</columns>
        <columns>Legal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Dieselskandal</value>
        </filters>
        <filters>
            <field>Clerk__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Legal__c</field>
            <operation>contains</operation>
            <value>jäger,krutisch</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>K_Neue ANWALT DG --&gt; ALEX</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>K_Neue_ANWALT_DG_BRITTA1</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Last_Stage_Change__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Finanzierung</value>
        </filters>
        <filters>
            <field>Clerk__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Legal__c</field>
            <operation>contains</operation>
            <value>jäger</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>K_Neue ANWALT KFZW --&gt; ALEX</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>L_Neue_F_lle_J_ger_Ornella</fullName>
        <columns>NAME</columns>
        <columns>Opportunity_Number__c</columns>
        <columns>Last_Stage_Change__c</columns>
        <columns>Stage__c</columns>
        <columns>Legal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Product__c</field>
            <operation>contains</operation>
            <value>Lebensversicherung</value>
        </filters>
        <filters>
            <field>Clerk__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Legal__c</field>
            <operation>contains</operation>
            <value>jäger</value>
        </filters>
        <filters>
            <field>Test__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>L_Neue Fälle Jäger --&gt; Ornella</label>
        <sharedTo>
            <group>Team_Kathi</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Dieselskandal</fullName>
        <active>true</active>
        <label>Dieselskandal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Finanzierung</fullName>
        <active>true</active>
        <label>Finanzierung</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lebensversicherung</fullName>
        <active>true</active>
        <label>Lebensversicherung</label>
    </recordTypes>
    <validationRules>
        <fullName>Change_Stage_Sachbearbeiter_required</fullName>
        <active>true</active>
        <description>Bevor die Stage "Entwurf" verändert werden kann, muss ein Sachbearbeiter eingetragen werden.</description>
        <errorConditionFormula>AND($User.Bypass_validation_rule__c = false,
OR(ISPICKVAL ( Stage__c , "Customers Opposition"),
ISPICKVAL ( Stage__c , "Legal Opposition"),
ISPICKVAL ( Stage__c , "Claim Letter"),
ISPICKVAL ( Stage__c , "Legal Opposition"),
ISPICKVAL ( Stage__c , "Lawsuit"),
ISPICKVAL ( Stage__c , "Class Action"),
ISPICKVAL ( Stage__c , "Appeal"),
ISPICKVAL ( Stage__c , "Processing"),
ISPICKVAL ( Stage__c , "Finished"),
ISPICKVAL ( Stage__c , "On Hold"),
ISPICKVAL ( Stage__c , "Canceled")),	
ISBLANK( Clerk__c ))</errorConditionFormula>
        <errorDisplayField>Clerk__c</errorDisplayField>
        <errorMessage>Bitte tragen Sie einen Sachbearbeiter ein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckOpposingCounselAccountId</fullName>
        <active>true</active>
        <errorConditionFormula>AND($User.Bypass_validation_rule__c = false,
Opportunity__r.Vehicle_Brand__r.Id !=  Opposing_Counsel__r.AccountId,Opposing_Counsel__r.AccountId!=null)</errorConditionFormula>
        <errorDisplayField>Opposing_Counsel__c</errorDisplayField>
        <errorMessage>Korrespondenzanwalt muss Fahrzeughersteller zugeordnet sein.</errorMessage>
    </validationRules>
</CustomObject>